# UNC-STOR-664-Fall-2025-Project-NFLAllocation

./: .gitignore  README.md  pyproject.toml
data/: team_mapping_wins.xlsx
data/helper_tables/: draft_team_mapping.xlsx  position_mapping.xlsx  team_mapping_unique.xlsx
data/processed/: capital_by_position_team_year.csv  capital_by_position_year.csv  data_without_cols.xlsx  win_pct_season.csv
data/raw/: fitz_spieldberg_trade_values.html
src/: 01_load_data.py  02_eda.py  03_2_Q2.Rmd  03_data_analysis.rmd  03_question_1.Rmd  03_question_3.Rmd  04_time.Rmd  05_teams.rmd  06_integrated_part2.rmd  README.md  STOR 664 Project Report.Rmd
