[project]
name = "unc-stor-664-fall-2025-project-nflallocation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.7.0",
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "nflreadpy>=0.1.4",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
]
